--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-		<link href="./app/immutable/assets/0.Z3jJKKHD.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.CTPyeUOB.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.Br6H2vLH.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.DpUvRoIr.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.RVXes5Y_.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.CqKfHlhU.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.pmVeCRVa.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.BUibCGb-.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.C8l-n8MR.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CHIKU2JX.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.Cj7iAZrl.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.Cxy16csg.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.BcgpIkIr.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BCycneuu.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.C3OeyA1j.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.DCmVvILP.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/Icon.B9zHo-Ew.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.C6rCCi4N.js">
   </head>
 
   <body>
-    <div>  <div class="wrapper svelte-1onjgon"><div class="slide svelte-fg7mma isVisible"><div class="textcontainer svelte-fg7mma"><h3 class="title svelte-fg7mma">Global inequality</h3> <p class="subtitle svelte-fg7mma"></p> <p class="subtitleB svelte-fg7mma"></p> <p class="credits svelte-fg7mma"></p></div> <img src="./assets/1.png" alt="Global inequality" class="svelte-fg7mma"> <div class="scroll-indicator svelte-fg7mma" data-svelte-h="svelte-m66n02"><span class="scroll-text svelte-fg7mma">scroll down</span> <svg class="chevron svelte-fg7mma" width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg></div> </div> <div class="slide svelte-fg7mma"><div class="textcontainer svelte-fg7mma"><h3 class="title svelte-fg7mma">Global inequality</h3> <p class="subtitle svelte-fg7mma"></p> <p class="subtitleB svelte-fg7mma"></p> <p class="credits svelte-fg7mma"></p></div> <img src="./assets/2.jpeg" alt="Global inequality" class="svelte-fg7mma"> <div class="scroll-indicator svelte-fg7mma" data-svelte-h="svelte-m66n02"><span class="scroll-text svelte-fg7mma">scroll down</span> <svg class="chevron svelte-fg7mma" width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg></div> </div> </div> <main id="content" class="svelte-1giw7zz"><section class="svelte-kza1zj"><p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-heart"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path></svg> <a target="_blank" href="https://www.statista.com/statistics/268750/global-gross-domestic-product-gdp/" data-svelte-h="svelte-uhb1p6">Today humanity produces more goods and services</a>
+    <div>  <div class="wrapper svelte-1onjgon"><div class="slide svelte-ur6ivm isVisible"><div class="textcontainer svelte-ur6ivm"><h3 class="title svelte-ur6ivm">Global inequality</h3> <p class="subtitle svelte-ur6ivm"></p> <p class="subtitleB svelte-ur6ivm"></p> <p class="credits svelte-ur6ivm"></p></div> <img src="./assets/1.png" alt="Global inequality" class="svelte-ur6ivm"> <div class="scroll-indicator svelte-ur6ivm" data-svelte-h="svelte-m66n02"><span class="scroll-text svelte-ur6ivm">scroll down</span> <svg class="chevron svelte-ur6ivm" width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg></div> </div> <div class="slide svelte-ur6ivm"><div class="textcontainer svelte-ur6ivm"><h3 class="title svelte-ur6ivm">Global inequality</h3> <p class="subtitle svelte-ur6ivm"></p> <p class="subtitleB svelte-ur6ivm"></p> <p class="credits svelte-ur6ivm"></p></div> <img src="./assets/2.jpeg" alt="Global inequality" class="svelte-ur6ivm"> <div class="scroll-indicator svelte-ur6ivm" data-svelte-h="svelte-m66n02"><span class="scroll-text svelte-ur6ivm">scroll down</span> <svg class="chevron svelte-ur6ivm" width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg></div> </div> </div> <main id="content" class="svelte-1giw7zz"><section class="svelte-kza1zj"><p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-heart"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path></svg> <a target="_blank" href="https://www.statista.com/statistics/268750/global-gross-domestic-product-gdp/" data-svelte-h="svelte-uhb1p6">Today humanity produces more goods and services</a>
     than ever before in history, enough to feed and sustain the entire world.</p> <p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-heart-crack"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"></path><path d="m12 13-1-1 2-2-3-3 2-2"></path></svg>
     Yet millions still live and die in poverty.</p> <p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-equal-not"><line x1="5" x2="19" y1="9" y2="9"></line><line x1="5" x2="19" y1="15" y2="15"></line><line x1="19" x2="5" y1="5" y2="19"></line></svg>
     If such abundance coexists with such deprivation, the problem isn&#39;t production,
@@ -99,7 +99,7 @@
 			
 			<script>
 				{
-					__sveltekit_y3jpp7 = {
+					__sveltekit_13m7aih = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/GLOBAL-INEQUALITY-STORY"
 					};
@@ -109,8 +109,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.DpUvRoIr.js"),
-						import("./app/immutable/entry/app.Cj7iAZrl.js")
+						import("./app/immutable/entry/start.CqKfHlhU.js"),
+						import("./app/immutable/entry/app.BcgpIkIr.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
