--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     
 		<link href="./app/immutable/assets/0.lcp6EDuu.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.Br6H2vLH.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.DYwHmyB7.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.BL-KtMhl.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.BzzBFrkG.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.BGUdcLvM.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.BUibCGb-.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.C8l-n8MR.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.BhDRqFrU.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BFtWGuGC.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.D2gFkFEh.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.dRqgqILS.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BCycneuu.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.DSGXfyO4.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CDtQjtJR.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/Icon.B9zHo-Ew.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.4yQoNYwv.js">
   </head>
@@ -79,11 +79,11 @@
     in many parts of the world can leave someone feeling hopeless and worried about
     our future. We often hear expressions like ‘history repeats itself.’</p> <p class="text-body svelte-kza1zj"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-smile"><circle cx="12" cy="12" r="10"></circle><path d="M8 14s1.5 2 4 2 4-2 4-2"></path><line x1="9" x2="9.01" y1="9" y2="9"></line><line x1="15" x2="15.01" y1="9" y2="9"></line></svg>
     But as Thomas Piketty pointed out in the documentary, sometimes looking back at history is
-    exactly what can give us hope for the future.</p> <p class="text-body svelte-kza1zj"></p> <video controls poster="assets/videos/after_ww2.jpg" width="100%" data-svelte-h="svelte-u90dq6"><source src="assets/videos/after_ww2.mp4" type="video/mp4"></video><span class="text-extra-small" data-svelte-h="svelte-1hz5leb">Source: <a target="_blank" href="https://www.imdb.com/title/tt5723056/">Capital in the 21st Century (2019) by Justin Pemberton</a></span> <p class="text-body svelte-kza1zj" data-svelte-h="svelte-1hunb82">Thanks.</p> </section></main> <section class="svelte-1vhichp"><h3 class="footer-title" data-svelte-h="svelte-1kld11j">EDA</h3> <p class="footer-text" data-svelte-h="svelte-ocnagv">The story above includes a selection of highlighted countries and region. In
+    exactly what can give us hope for the future.</p> <p class="text-body svelte-kza1zj"></p> <video controls poster="assets/videos/after_ww2.jpg" width="100%" data-svelte-h="svelte-u90dq6"><source src="assets/videos/after_ww2.mp4" type="video/mp4"></video><span class="text-extra-small" data-svelte-h="svelte-1hz5leb">Source: <a target="_blank" href="https://www.imdb.com/title/tt5723056/">Capital in the 21st Century (2019) by Justin Pemberton</a></span> <p class="text-body svelte-kza1zj" data-svelte-h="svelte-1hunb82">Thanks.</p> </section></main> <section class="svelte-1vhichp"><h3 class="footer-title" data-svelte-h="svelte-1kld11j">EDA</h3> <p class="footer-text" data-svelte-h="svelte-1kz7t0o">The story above includes a selection of highlighted countries and region. In
     this <a target="_blank" href="https://observablehq.com/@sandraviz/global-inequality?collection=@sandraviz/global-inequality">data notebook</a>
     someone finds the complete EDA, meaning the visual analysis of all countries
     and region reading the Gini coefficient and in this
-    <a target="_blank" href="https://observablehq.com/@sandraviz/global-inequality?collection=@sandraviz/global-inequality">one</a> reading the different incomes share.</p> <p class="footer-text" data-svelte-h="svelte-tcmg0c"></p> <h3 class="footer-title" data-svelte-h="svelte-bnuzeu">Github repositories</h3> <p class="footer-text" data-svelte-h="svelte-193znl3">This project went through several stages, from defining a visual language
+    <a target="_blank" href="https://observablehq.com/d/b8a01ac60f823d87?collection=@sandraviz/global-inequality">one</a> reading the different incomes share.</p> <p class="footer-text" data-svelte-h="svelte-tcmg0c"></p> <h3 class="footer-title" data-svelte-h="svelte-bnuzeu">Github repositories</h3> <p class="footer-text" data-svelte-h="svelte-193znl3">This project went through several stages, from defining a visual language
     and creating the image-based introduction to cleaning and preparing the
     data, and finally developing the story. The entire code is publicly
     available in the corresponding GitHub repositories.</p> <p class="footer-text" style="display: flex; align-items: center; gap: 0.5em;"><svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg> <a target="_blank" href="https://github.com/sandravizz/Global-Inequality-Intro" style="display: flex; align-items: center; gap: 0.5em;" data-svelte-h="svelte-8rkgza">Intro</a> <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg> <a target="_blank" href="https://github.com/sandravizz/Global-Inequality-Data" style="display: flex; align-items: center; gap: 0.5em;" data-svelte-h="svelte-1ccp4fq">Data</a> <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" stroke="#1CB0BA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" display="block" class="lucide-icon lucide lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg> <a target="_blank" href="https://github.com/sandravizz/Global_inequality_Story" style="display: flex; align-items: center; gap: 0.5em;" data-svelte-h="svelte-dzp64s">Story</a></p> <p class="footer-text" data-svelte-h="svelte-tcmg0c"></p> <h3 class="footer-title" data-svelte-h="svelte-1xue0ve">Data source</h3> <p class="footer-text" data-svelte-h="svelte-1p56b0c">Income data was sourced from the <a target="_blank" href="https://wid.world/wid-world/">World Inequality Database</a>
@@ -99,7 +99,7 @@
 			
 			<script>
 				{
-					__sveltekit_1aln0fn = {
+					__sveltekit_g4q6d0 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/GLOBAL-INEQUALITY-STORY"
 					};
@@ -109,8 +109,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.DYwHmyB7.js"),
-						import("./app/immutable/entry/app.BFtWGuGC.js")
+						import("./app/immutable/entry/start.BzzBFrkG.js"),
+						import("./app/immutable/entry/app.dRqgqILS.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
