--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-		<link href="./app/immutable/assets/0.ByP20oZ1.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.CnOOWFJe.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.Br6H2vLH.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.XEh_SA3E.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.D4cELDHx.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.W9njGRQU.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.BOAC6Ghe.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler.BUibCGb-.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.C8l-n8MR.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CXFkuw5t.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.DDcx7lKq.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.DAuusm_y.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.BVWox_JR.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BCycneuu.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.C1f-ieqY.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.DM0OvsT7.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/Icon.B9zHo-Ew.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.BMn2VhFV.js">
   </head>
@@ -99,7 +99,7 @@
 			
 			<script>
 				{
-					__sveltekit_1n64qin = {
+					__sveltekit_y0g9w0 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/GLOBAL-INEQUALITY-STORY"
 					};
@@ -109,8 +109,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.XEh_SA3E.js"),
-						import("./app/immutable/entry/app.DDcx7lKq.js")
+						import("./app/immutable/entry/start.W9njGRQU.js"),
+						import("./app/immutable/entry/app.BVWox_JR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
